--- a/src/components/myComponents/ContainerCenter.astro
+++ b/src/components/myComponents/ContainerCenter.astro
@@ -8,6 +8,6 @@ interface Props extends HTMLAttributes<"section"> {}
 const { class: className } = Astro.props;
 ---
 
-<section class={twMerge("w-[85%] laptop:w-[80%]", className)}>
+<section class={twMerge("w-[85%] ", className)}>
   <slot />
 </section>
