feat: Add Google site verification meta tag for SEO

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-
+    <!-- Etiqueta de indexacion de google -->
+    <meta
+      name="google-site-verification"
+      content="tX6i_pdVKyfP5v5D7iJryh1wFAGzMapprVrq1URW-Ho"
+    />
     <!-- 1 - Title -->
     <title>Alexis Chim | Desarrollador Web Frontend</title>
 
