feat: Add critical font and CSS preload links in Layout.astro

--- a/src/components/myComponents/Hero.astro
+++ b/src/components/myComponents/Hero.astro
@@ -1,6 +1,5 @@
 ---
-import { myContact } from "@data/dataContact";
-import { Icon } from "astro-icon/components";
+
 ---
 
 <section
@@ -31,14 +30,7 @@ import { Icon } from "astro-icon/components";
     Hola, soy <span
       class="inline-flex items-center gap-2 font-extrabold mb-3 tracking-tight"
     >
-      Alexis
-      <Icon
-        name="cap"
-        class="w-10 h-10 tablet:w-12 tablet:h-12 desktop:w-18 desktop:h-18 text-violet-700"
-        is:inline
-        aria-hidden="true"
-      />
-      Chim
+      Alexis🧢Chim
     </span>
   </h1>
 
@@ -113,7 +105,7 @@ import { Icon } from "astro-icon/components";
   </nav>
 
   <!-- Footer con iconos accesibles -->
-  <footer
+  <!-- <footer
     class="my-7 flex justify-center items-center gap-4"
     aria-label="Enlaces de contacto"
   >
@@ -130,5 +122,5 @@ import { Icon } from "astro-icon/components";
         </a>
       ))
     }
-  </footer>
+  </footer> -->
 </section>
