--- a/src/components/myComponents/Hero.astro
+++ b/src/components/myComponents/Hero.astro
@@ -1,5 +1,5 @@
 ---
-
+import { myContact } from "@data/dataContact";
 ---
 
 <section
@@ -27,16 +27,14 @@
     id="hero-heading"
     class="text-5xl sm:text-6xl md:text-7xl font-bold tracking-tight mt-6 mb-1 text-gray-900"
   >
-    Hola, soy <span
-      class="inline-flex items-center gap-2 font-extrabold mb-3 tracking-tight"
+    Hola, soy <span class="font-extrabold block laptop:inline"
+      >Alexis🧢Chim</span
     >
-      Alexis🧢Chim
-    </span>
   </h1>
 
   <!-- Subtítulo -->
   <h2
-    class="mb-6 text-2xl sm:text-3xl md:text-4xl font-bold tracking-tight bg-gradient-to-r from-gray-900 via-gray-800 to-purple-700 bg-clip-text text-transparent leading-tight"
+    class="mb-6 text-2xl sm:text-3xl md:text-4xl tracking-tight font-bold bg-gradient-to-r from-neutral-900 via-slate-600 to-purple-600 bg-clip-text text-transparent leading-tight"
   >
     Frontend Developer
   </h2>
@@ -105,22 +103,22 @@
   </nav>
 
   <!-- Footer con iconos accesibles -->
-  <!-- <footer
+  <footer
     class="my-7 flex justify-center items-center gap-4"
     aria-label="Enlaces de contacto"
   >
     {
-      myContact.map(({ href, bg, textColor, title, icon }) => (
+      myContact.map(({ href, bg, title, iconHero }) => (
         <a
           href={href}
-          class={`p-3 rounded-xl ${bg} ${textColor} hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 transition`}
+          class={`p-3 rounded-xl ${bg} hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 transition`}
           target="_blank"
           rel="noopener noreferrer"
           aria-label={`Contáctame por ${title}`}
         >
-          <Icon name={icon} class="h-6 w-6" is:inline aria-hidden="true" />
+          <img src={iconHero} alt={title} class="h-6 w-6" loading="lazy" />
         </a>
       ))
     }
-  </footer> -->
+  </footer>
 </section>
