--- a/src/components/myComponents/Hero.astro
+++ b/src/components/myComponents/Hero.astro
@@ -4,7 +4,7 @@ import { myContact } from "@data/dataContact";
 
 <section
   id="hero"
-  class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 sm:px-8 bg-gradient-to-t from-white via-purple-100 to-purple-400"
+  class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 sm:px-8 bg-gradient-to-t from-white via-purple-100 to-purple-700"
   aria-labelledby="hero-heading"
 >
   <!-- Badge -->
@@ -24,7 +24,7 @@ import { myContact } from "@data/dataContact";
   <!-- H1 principal: LCP -->
   <h1
     id="hero-heading"
-    class="text-4xl sm:text-6xl md:text-7xl font-bold tracking-tight mt-6 mb-1 text-gray-900"
+    class="text-5xl sm:text-6xl md:text-7xl font-bold tracking-tight mt-6 mb-1 text-black"
   >
     Hola, soy <span class="font-extrabold block laptop:inline"
       >Alexis🧢Chim</span
@@ -33,7 +33,7 @@ import { myContact } from "@data/dataContact";
 
   <!-- Subtítulo -->
   <h2
-    class="mb-6 text-2xl sm:text-3xl md:text-4xl tracking-tight font-bold bg-gradient-to-r from-neutral-900 via-slate-600 to-purple-600 bg-clip-text text-transparent leading-tight"
+    class="mb-6 text-2xl sm:text-3xl md:text-4xl tracking-tight font-bold bg-gradient-to-r from-neutral-900 via-slate-700 to-purple-600 bg-clip-text text-transparent leading-tight"
   >
     Frontend Developer
   </h2>
