--- a/src/components/myComponents/Projects.astro
+++ b/src/components/myComponents/Projects.astro
@@ -6,7 +6,7 @@ import MyTitle from "./MyTitle.astro";
 
 <section
   id="projects"
-  class="snap-start py-12 w-full bg-gray-50"
+  class="snap-start py-12 w-full laptop:py-32"
   aria-labelledby="projects-title"
 >
   <header class="mx-auto text-center max-w-3xl mb-6">
@@ -20,7 +20,7 @@ import MyTitle from "./MyTitle.astro";
 
   <!-- Carrusel de proyectos -->
   <MyCarousel
-    client:visible
+    client:load
     elements={myProjects}
     aria-label="Carrusel con proyectos destacados"
   />
